# isimip-client

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
isimip_client/: __init__.py  cli.py  client.py  utils.py
notebooks/: cutout.ipynb  data.ipynb  datasets.ipynb  files-api.ipynb  files.ipynb  mask.ipynb  plot.ipynb  repository.ipynb  requirements.txt  select-points.ipynb  select.ipynb
requirements/: jupyter.txt  tests.txt
