[project]
name = "isimip-client"
authors = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
maintainers = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
description = "A thin client library to use the API of the ISIMIP repository using Python."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    "requests>=2"
]
dynamic = ["version"]

[project.optional-dependencies]
jupyter = [
    "jupyter",
    "jupyterlab",
    "matplotlib",
    "netCDF4",
    "pandas",
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
Repository = "https://github.com/ISI-MIP/isimip-client"

[tool.setuptools]
packages = ["isimip_client"]

[tool.setuptools.dynamic]
version = { attr = "isimip_client.__version__" }

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "B006",   # mutable-argument-default
    "B007",   # unused-loop-control-variable
    "B018",   # useless-expression
    "RUF012", # mutable-class-default
]

[tool.ruff.isort]
known-first-party = [
    "isimip_client"
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "isimip_utils",
    "first-party",
    "local-folder"
]

[tool.ruff.isort.sections]
isimip_utils = ["isimip_utils"]
